ckeditor button accesibility restored after fixing intersection with tool-bar-wraper, maximal message size control in js, context path restored to /crmForum

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -215,7 +215,7 @@
     margin-left: 40px;
     text-align-last: center;
     text-align: justify;
-    height: 400px;
+    height: auto;
     white-space: nowrap;
     overflow-x: auto;
 }
